[gd_scene load_steps=6 format=3 uid="uid://cwrb8fj7r5i2v"]

[ext_resource type="Script" uid="uid://csxlf1qvimts2" path="res://Scenes/TeamManagment/team_management_modal.gd" id="1_2x8nj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_modal_bg"]
bg_color = Color(0.1, 0.1, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.2, 0.2, 0.35, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.1, 0.1, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.7, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.15, 0.25, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.5, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="TeamManagementModal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2x8nj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="ModalPanel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_modal_bg")

[node name="VBoxContainer" type="VBoxContainer" parent="ModalPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="HBoxContainer" parent="ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="ModalPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "üë• Team Management"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="ModalPanel/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "‚úï"

[node name="HSeparator" type="HSeparator" parent="ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="ModalPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActiveTeam" type="VBoxContainer" parent="ModalPanel/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActiveTeamLabel" type="Label" parent="ModalPanel/VBoxContainer/Content/ActiveTeam"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è Active Team"
horizontal_alignment = 1

[node name="ActiveTeamSlots" type="HBoxContainer" parent="ModalPanel/VBoxContainer/Content/ActiveTeam"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="HSeparator" parent="ModalPanel/VBoxContainer/Content"]
layout_mode = 2

[node name="Inventory" type="VBoxContainer" parent="ModalPanel/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventoryLabel" type="Label" parent="ModalPanel/VBoxContainer/Content/Inventory"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "üì¶ Pet Inventory"
horizontal_alignment = 1

[node name="InventorySlots" type="HBoxContainer" parent="ModalPanel/VBoxContainer/Content/Inventory"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="ModalPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "üíæ Save Changes"

[node name="CancelButton" type="Button" parent="ModalPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "‚ùå Cancel"

[connection signal="gui_input" from="Background" to="." method="_on_background_clicked"]
[connection signal="pressed" from="ModalPanel/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ModalPanel/VBoxContainer/ButtonContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ModalPanel/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
